--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,20 +1,57 @@
 input {
-	beats {
-		port => 5044
-	}
-
-	tcp {
-		port => 5000
-	}
+  jdbc {
+    # jdbc_driver_library => "mysql-connector-java-8.0.26.jar"
+    jdbc_driver_class => "com.mysql.jdbc.Driver"
+    jdbc_connection_string => "jdbc:mysql://mysql:3306/es_db"
+    jdbc_user => root
+    jdbc_password => example
+    jdbc_paging_enabled => true
+    tracking_column => "unix_ts_in_secs"
+    use_column_value => true
+    tracking_column_type => "numeric"
+    schedule => "*/5 * * * * *"
+    statement => "SELECT *, UNIX_TIMESTAMP(modification_time) AS unix_ts_in_secs FROM es_table WHERE (UNIX_TIMESTAMP(modification_time) > :sql_last_value AND modification_time < NOW()) ORDER BY modification_time ASC"
+  }
 }
-
-## Add your filters / logstash plugins configuration here
-
+filter {
+  mutate {
+    copy => { "id" => "[@metadata][_id]"}
+    remove_field => ["id", "@version", "unix_ts_in_secs"]
+  }
+}
 output {
-	elasticsearch {
-		hosts => "elasticsearch:9200"
-		user => "elastic"
-		password => "changeme"
-		ecs_compatibility => disabled
-	}
+  # stdout { codec =>  "rubydebug"}
+  elasticsearch {
+  	  hosts => "elasticsearch:9200"
+  	  user => "elastic"
+  	  password => "changeme"
+      index => "rdbms_sync_idx"
+      document_id => "%{[@metadata][_id]}"
+      ecs_compatibility => disabled
+  }
 }
+
+
+# input {
+# 	beats {
+# 		port => 5044
+# 	}
+#
+# 	tcp {
+# 		port => 5000
+# 	}
+# }
+#
+# ## Add your filters / logstash plugins configuration here
+#
+# output {
+# 	elasticsearch {
+# 		hosts => "elasticsearch:9200"
+# 		user => "elastic"
+# 		password => "changeme"
+# 		ecs_compatibility => disabled
+# 	}
+# }
+
+
+
